# Calculator_Converter

./: .gitignore  LICENSE  README.md  conanfile.py
src/: conversion_functions.cpp  conversion_functions.h  conversion_gui.cpp  graph_gui.cpp  guis.h  main.cpp  maths_functions.cpp  maths_functions.h  maths_gui.cpp  meson.build  scripting.cpp  scripting.h  scripting_gui.cpp  utils.cpp  utils.h
src/lib/: nml.c
test_files/: file.md
